feat: adicionado crud dos roles das categorias de acesso
